$Id: ChangeLog,v 1.496 2009/01/04 04:30:48 thiagocorrea Exp $

2008-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/mainframe.cpp,
	* tools/nutconf/nutconfdoc.cpp:
	      Allow nutconf to build with _UNICODE under Win32. 

2008-12-24  Thiago A. Correa <thiago.correa@gmail.com>
        
	* conf/dev/dev.nut, 
          Improve Serial Bit Bang drivers dependency check
          in nutconf.

2008-12-19  Ole Reinhardt <ole.reinhardt@thermotemp.de>
        
	* arch/arm/dev/gpioa_at91.c, 
	  arch/arm/dev/gpiob_at91.c, 
	  arch/arm/dev/gpioc_at91.c:
          Fixed irq enable / disable bug  

2008-11-12  Harald Kipp  <harald.kipp@egnite.de>

	* conf/arch/arm.nut, dev/at45db.c: Enable DataFlash support
	for EIR board.


2008-10-26  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* tools/crurom/crurom.c: Added .svn to the list of directories to   
          ignore when creating urom.c

2008-10-22  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/usart0at91.c, arch/arm/dev/usart1at91.c,
	arch/arm/dev/usartat91.c, conf/arch/arch.nut,
	include/arch/arm/at91_us.h, include/arch/arm/at91sam7s.h,
	include/arch/arm/at91sam7se.h, include/arch/arm/at91sam7x.h,
	include/arch/arm/at91sam9260.h, include/arch/arm/at91sam9xe.h,
	include/cfg/uart.h: Prepared AT91 UART hardware handshake.

	* conf/arch/arm.nut: Added MCU family macros and AT91 UART 
	hardware handshake.

	* conf/dev/dev.nut, include/dev/sbi_mmc.h, dev/sbi_mmc.c,
	dev/sbi0mmc0.c, dev/sbi0mmc1.c, dev/sbi1mmc0.c, dev/sbi1mmc1.c:
	New software SPI MMC routines added. Actually we need drivers
	for a new SPI bus concept, but MMC was not working on the EIR.
	So I added another temporary solution. This one should work
	on all supported targets, but has been tested on the EIR only.
	It supports 2 buses with 2 MMC sockets each.

	* include/cfg/arch/avr.h: Offering the same port identifiers
	as for the AT91 family. The old ones are kept for backward
	compatibility.
