@@ -1,4 +1,10 @@
-$Id: ChangeLog,v 1.496 2009/01/04 04:30:48 thiagocorrea Exp $
+$Id: ChangeLog,v 1.497 2009/01/04 04:35:45 thiagocorrea Exp $
+
+2008-01-04  Thiago A. Correa <thiago.correa@gmail.com>
+        
+	* tools/nutconf/nutcomponent.c:
+	      Update lua initialization to conform to lua 5.x API change.
+	      This change should still be compatible with 4.x.
 
 2008-01-04  Thiago A. Correa <thiago.correa@gmail.com>
         
